增加背景纹理,修改back-to-top样式

--- a/themes/next/source/css/_my/mycss.styl
+++ b/themes/next/source/css/_my/mycss.styl
@@ -1,5 +1,5 @@
 body{
-	background: rgb(245,245,245);
+	background: url(/images/bg.png);
 	font-size: 16px;
 }
 .site-author-image {
@@ -60,7 +60,10 @@ h1, h2, h3, h4, h5, h6{
 	background: #FF8C69;
 }
 .back-to-top {
+  border-radius: 50%;
+  background: #fff;
+  color: #000;
+  box-shadow: 0 0 5px #ccc;
 	width: 30px;
 	line-height: 2.4;
-	border-radius: 3px;
 }
