--- a/themes/next/source/css/_my/mycss.styl
+++ b/themes/next/source/css/_my/mycss.styl
@@ -66,4 +66,10 @@ h1, h2, h3, h4, h5, h6{
   box-shadow: 0 0 5px #ccc;
 	width: 30px;
 	line-height: 2.4;
+  transition: all .3s;
+}
+.back-to-top:hover {
+  border-radius: 0;
+  background: #eee;
+  box-shadow: 0 0 5px #000;
 }
